--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hive_flutter: ^1.1.0
   modal_bottom_sheet: ^2.0.1
   flutter_slidable: ^1.3.0
+  flex_color_picker: ^2.5.0
 
 dev_dependencies:
   flutter_test:
