--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   modal_bottom_sheet: ^2.0.1
   flutter_slidable: ^1.3.0
   flex_color_picker: ^2.5.0
+  package_info_plus: ^1.4.2
+  syncfusion_flutter_charts: ^20.1.61
+  syncfusion_flutter_xlsio: ^20.1.61-beta
+  file_saver: ^0.1.0
+  flutter_native_splash: ^2.2.3+1
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +62,13 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   hive_generator: ^1.1.3
   build_runner: ^2.1.11
+  flutter_launcher_icons: "^0.9.2"
+
+dependency_overrides:
+  file_saver:
+    git:
+      url: https://github.com/incrediblezayed/file_saver.git
+      ref: main
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -99,3 +111,12 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
+
+flutter_native_splash:
+  color: "#FFF4F4"
+  image: assets/icon.png
